--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
     <div id="game-board">
       <canvas id="canvas" width="500" height="700"></canvas>
     </div>
-
+<div id="game-over">
+    <h2 class="gameovertext">Game Over!</h2>
+    <h2 class="yourscore">Your Final Score<br><span id="scoreboard">0</span></h2>
+</div>
     <script type="text/javascript" src="js/index.js"></script>
   </body>
 </html>
